--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,20 +6,24 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.6 <3.0.0'
+  sdk: '>=2.19.2 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
   cupertino_icons: ^1.0.5
+  firebase_auth: ^4.7.2
+  cloud_firestore: ^4.8.3
+  firebase_core: ^2.15.0
   provider: ^6.0.5
   fluttertoast: ^8.2.2
+  curved_navigation_bar: ^1.0.3
+  flutter_form_builder: ^8.0.0
+  form_builder_validators: ^8.6.1
+  expansion_tile_card: ^3.0.0
+  flutter_chips_input: ^2.0.0
 
-  firebase_auth: ^4.7.2
-  firebase_core: ^2.15.0
-  cloud_firestore: ^4.8.4
-  firebase_storage: ^11.2.5
 
 dev_dependencies:
   flutter_test:
