--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = yarytefit
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.yarytefit
+PRODUCT_BUNDLE_IDENTIFIER = com.dev.yarytefit
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2023 com.dev.yarytefit All rights reserved.
